syntax = "proto3";

package go.micro.srv.GetIndex;

service Example {
	rpc GetIndex(Request) returns (Response) {}

}


//web-->srv
message Request {
	//无参数
}

//srv-->web
message Response {
	//错误码
	string errno = 1;
	//错误信息
	string errmsg = 2;
	//返回数据
	bytes data = 3;
}
