syntax = "proto3";

package go.micro.srv.GetSession;

service Example {
    rpc GetSession (Request) returns (Response) {
    }
}

//web-->srv
message Request {
    //sessionid
    string sessionid = 1;
}

//srv--web
message Response {
    //错误码
    string errno = 1;
    //错误信息
    string errmsg = 2;
    //用户名
    string name = 3;

}
