syntax = "proto3";

package go.micro.srv.PostAvatar;

service Example {
    rpc PostAvatar (Request) returns (Response) {
    }

}

//web-->srv
message Request {
    //sessionid
    string sessionid = 1;
    //文件大小
    int64 filesize = 2;
    //文件名
    string filename = 3;
    //二进制图片
    bytes buffer = 4;
}

//srv--->web
message Response {
    //错误码
    string errno = 1;
    //错误信息
    string errmsg = 2;
    //fileid
    string fileid = 3;
}

