syntax = "proto3";

package go.micro.srv.PostRet;

service Example {
	rpc PostRet(Request) returns (Response) {}
}



message Request {
	//手机号
	string mobile = 1;
	//密码
	string password = 2;
	//短信验证码
	string sms_code = 3;
}

message Response {
	//错误码
	string errno = 1;
	//错误信息
	string errmsg = 2;
	//sessionID
	string sessionid = 3;

}

